--- a/environment.yaml
+++ b/environment.yaml
@@ -13,6 +13,7 @@ dependencies:
   - pybind11
   - pybind11-abi
   - numpy
+  - pandas # for tudat.io
   - pytest
   - matplotlib # for tudat.plotting
   - basemap # for tudat.plotting
