Added docstrings entries to gravity field variations; not working

--- a/docstrings/numerical_simulation/environment_setup/__package__.yaml
+++ b/docstrings/numerical_simulation/environment_setup/__package__.yaml
@@ -19,7 +19,7 @@ modules:
   - atmosphere
   - ephemeris
   - gravity_field
-# - gravity_field_variation
+  - gravity_field_variation
   - radiation_pressure
   - rotation_model
   - shape
