--- a/docstrings/numerical_simulation/estimation_setup/__package__.yaml
+++ b/docstrings/numerical_simulation/estimation_setup/__package__.yaml
@@ -58,6 +58,11 @@ functions:
       The function checks for consistency between the parameter settings and the models contained in the simulation setup (given by the `bodies` & and `propagator_settings` parameters).
 
     parameters:
+      - name: parameter_settings # [py]
+        type: list( :class:`~tudatpy.numerical_simulation.estimation_setup.EstimatableParameterSettings` ) # [py]
+        description: |
+          List of objects that define the settings for the parameters that are to be created. Each entry in this list is typically created by a call to a factory function in the :ref:`~tudatpy.numerical_simulation.estimation_setup.parameter` module
+
       - name: bodies # [py]
         type: :class:`~tudatpy.numerical_simulation.environment.SystemOfBodies` # [py]
         description: |
