--- a/docstrings/numerical_simulation/estimation_setup/parameter.yaml
+++ b/docstrings/numerical_simulation/estimation_setup/parameter.yaml
@@ -446,7 +446,7 @@ functions:
     short_summary: "Function for defining parameter settings for the cosine coefficients of body's spherical harmonics gravitational model."
     extended_summary: |
       Factory function for creating a (linear sensitivity) parameter settings object for the spherical harmonics cosine-coefficients (:math:`\bar{C}_{lm}`) of a hody with a spherical harmonic gravity field. Using this function, a 'full' set of spherical harmonic coefficients between an minimum/maximum degree/order are estimated. For instance, for minimum degree/order of 2/0, and maximum degree/order 4/4, all spherical harmonic cosine coefficients of degrees 2, 3 and 4 are estimated. If the maximum degree/order is set to 4/2, only coefficients with an order of 0, 1 and 2 are included. The entries in the parameter are sorted first by degree, and then by order (both in ascending order)
-      Using the spherical harmonics cosine coefficients as estimatable parameter requires
+      Using the spherical harmonics cosine coefficients as estimatable parameter requires:
         * A :func:`~tudatpy.numerical_simulation.environment_setup.gravity_field.spherical_harmonic` (or derived) gravity model to be defined for the body specified by the `body` parameter
         * Any dynamical or observational model to depend on the estimated cosine coefficients of the body specified by the `body` parameter. Typically, this dependency will be a :func:`~tudatpy.numerical_simulation.propagation_setup.acceleration.spherical_harmonic` acceleration 
     #(%!) Model information on parametrization of spherical harmonics gravity coming soon.
@@ -485,6 +485,9 @@ functions:
     short_summary: "Function for defining parameter settings for the sine coefficients of body's spherical harmonics gravitational model."
     extended_summary: |
       Factory function for creating a (linear sensitivity) parameter settings object for the spherical harmonics sine-coefficients (:math:`\bar{S}_{lm}`) of a hody with a spherical harmonic gravity field. Using this function, a 'full' set of spherical harmonic coefficients between an minimum/maximum degree/order are estimated. For instance, for minimum degree/order of 2/1 (there is no order 0 sine coefficient), and maximum degree/order 4/4, all spherical harmonic sine coefficients of degrees 2, 3 and 4 are estimated. If the maximum degree/order is set to 4/2, only coefficients with an order of 1 and 2 are included. The entries in the parameter are sorted first by degree, and then by order (both in ascending order)
+      Using the spherical harmonics cosine coefficients as estimatable parameter requires:
+        * A :func:`~tudatpy.numerical_simulation.environment_setup.gravity_field.spherical_harmonic` (or derived) gravity model to be defined for the body specified by the `body` parameter
+        * Any dynamical or observational model to depend on the estimated cosine coefficients of the body specified by the `body` parameter. Typically, this dependency will be a :func:`~tudatpy.numerical_simulation.propagation_setup.acceleration.spherical_harmonic` acceleration 
     #(%!) Model information on parametrization of spherical harmonics gravity coming soon.
 
     parameters:
@@ -572,7 +575,7 @@ functions:
     extended_summary: |
       Factory function for creating a (linear sensitivity) parameter settings object for a body's constant rotation rate parameter.
       Using the constant rotation rate as estimatable parameter requires:
-        * A :func:`~tudatpy.numerical_simulation.environment_setup.gravity_field.rotation_model.simple` or :func:`~tudatpy.numerical_simulation.environment_setup.gravity_field.rotation_model.simple_from_spice` rotation model specified by the `body` parameter
+        * A :func:`~tudatpy.numerical_simulation.environment_setup.rotation_model.simple` or :func:`~tudatpy.numerical_simulation.environment_setup.rotation_model.simple_from_spice` rotation model specified by the `body` parameter
         * Any dynamical or observational model to depend on the rotation model of the body specified by the `body` parameter
     #(%!) help!
     #(%!) Model information _________(on which model?)_________  coming soon.
@@ -593,9 +596,9 @@ functions:
   - name: rotation_pole_position # [py]
     short_summary: "Function for defining parameter settings for a body's rotation pole position."
     extended_summary: |
-      Factory function for creating a (linear sensitivity) parameter settings object for a body's rotation pole position.
+      Factory function for creating a (linear sensitivity) parameter settings object for a body's rotation pole position, parameterized by the constant pole rotation angles (:math:`alpha` and :math:`\delta`).
       Using the rotation pole position as estimatable parameter requires:
-        * A :func:`~tudatpy.numerical_simulation.environment_setup.gravity_field.rotation_model.simple` or :func:`~tudatpy.numerical_simulation.environment_setup.gravity_field.rotation_model.simple_from_spice` rotation model specified by the `body` parameter
+        * A :func:`~tudatpy.numerical_simulation.environment_setup.rotation_model.simple` or :func:`~tudatpy.numerical_simulation.environment_setup.rotation_model.simple_from_spice` rotation model specified by the `body` parameter
         * Any dynamical or observational model to depend on the rotation model of the body specified by the `body` parameter
     #(%!) help!
     #(%!) Model information _________(on which model?)_________  coming soon.
