--- a/docstrings/math/interpolators.yaml
+++ b/docstrings/math/interpolators.yaml
@@ -300,12 +300,12 @@ functions:
         type: InterpolatorSettings
         description: Settings that define the type of interpolator that is to be used
 
-      - name: data_to_interpolate
+      - name: data_first_derivatives
         type: dict[float, float] = dict()
         description: Key-value container with pairs of independent variables (key) and
           first derivative dependent variables w.r.t. independent variable (value) from which
           the interpolation is to be performed. This input is *only* required if the
-          requested interpolation algorithm requires first derivatives as input.
+          requested interpolation algorithm requires first derivatives as input (such as the Hermite spline interpolator
 
     returns:
         type: OneDimensionalInterpolatorScalar
@@ -326,12 +326,12 @@ functions:
         type: InterpolatorSettings
         description: Settings that define the type of interpolator that is to be used
 
-      - name: data_to_interpolate
+      - name: data_first_derivatives
         type: dict[float, np.array] = dict()
         description: Key-value container with pairs of independent variables (key) and
           first derivative dependent variables w.r.t. independent variable (value) from which
           the interpolation is to be performed. This input is *only* required if the
-          requested interpolation algorithm requires first derivatives as input.
+          requested interpolation algorithm requires first derivatives as input (such as the Hermite spline interpolator).
 
     returns:
         type: OneDimensionalInterpolatorVector
@@ -352,12 +352,12 @@ functions:
         type: InterpolatorSettings
         description: Settings that define the type of interpolator that is to be used
 
-      - name: data_to_interpolate
+      - name: data_first_derivatives
         type: dict[float, np.array] = dict()
         description: Key-value container with pairs of independent variables (key) and
           first derivative dependent variables w.r.t. independent variable (value) from which
           the interpolation is to be performed. This input is *only* required if the
-          requested interpolation algorithm requires first derivatives as input.
+          requested interpolation algorithm requires first derivatives as input (such as the Hermite spline interpolator
 
     returns:
         type: OneDimensionalInterpolatorMatrix
