--- a/docstrings/numerical_simulation/environment_setup/__package__.yaml
+++ b/docstrings/numerical_simulation/environment_setup/__package__.yaml
@@ -282,3 +282,28 @@ functions:
         type: RadiationPressureInterfaceSettings # [py]
         description: "Settings defining the radiation pressure interface that is to be created." # [py]
 
+  - name: add_flight_conditions # [py]
+    short_summary: "Function that creates a flight conditions, and adds it to an existing body."
+    extended_summary: |
+      This function can be used to add  a :class:`~tudatpy.numerical_simulation.environment.FlightConditions` object to an existing body.
+      Typically, the ``FlightConditions`` are created automatically when they are required (for the calulcation of an
+      aerodynamic acceleration, or the saving of certain dependent variables). However, in some cases it may be useful
+      to manually trigger their creation, which is done through this function. If the ``central_body_name`` input
+      denotes a body that is endowed with an :class:`~tudatpy.numerical_simulation.environment.AtmosphereModel`, this function
+      automically creates an :class:`~tudatpy.numerical_simulation.environment.AtmosphericFlightConditions` object (capable of
+      calculating density, speed of sound, etc.), instead of the more basic :class:`~tudatpy.numerical_simulation.environment.FlightConditions`
+      (which is limited to properties such as altitude, latitude, etc.)
+
+    parameters:
+      - name: bodies # [py]
+        type: SystemOfBodies # [py]
+        description: "Object defining the physical environment, with all properties of artificial and natural bodies." # [py]
+
+      - name: body_name # [py]
+        type: str # [py]
+        description: "Name of the body for which the flight conditions are to be created" # [py]
+
+      - name: central_body_name # [py]
+        type: str # [py]
+        description: "Name of the cenral body w.r.t. which the flight conditions are to be created (typically, but not necesarilly, the central body of propagation)/" # [py]
+
