--- a/docstrings/numerical_simulation/propagation_setup/acceleration.yaml
+++ b/docstrings/numerical_simulation/propagation_setup/acceleration.yaml
@@ -539,32 +539,32 @@ functions:
       - name: calculateSchwarzschildCorrection # [cpp]
         type: bool # [cpp]
       - name: use_schwarzschild # [py]
-        type: bool # [py]
-        description: Maximum degree of the spherical harmonic expansion for the body exerting the acceleration.
+        type: bool, default=False # [py]
+        description: Boolean defining whether or not to use the Schwarzschild contribution to the acceleration correction
 
       - name: calculateLenseThirringCorrection # [cpp]
         type: bool # [cpp]
       - name: use_lense_thirring # [py]
         type: bool # [py]
-        description: Maximum order of the spherical harmonic expansion for the body exerting the acceleration.
+        description: Boolean defining whether or not to use the Lense-Thirring contribution to the acceleration correction
 
       - name: calculateDeSitterCorrection # [cpp]
         type: bool # [cpp]
       - name: use_de_sitter # [py]
-        type: bool # [py]
-        description: Maximum degree of the spherical harmonic expansion for the body undergoing the acceleration.
+        type: bool, default=False # [py]
+        description: Boolean defining whether or not to use the de Sitter contribution to the acceleration correction
 
       - name: primaryBody # [cpp]
         type: std::string, default="" # [cpp]
       - name: de_sitter_central_body # [py]
         type: str, default="" # [py]
-        description: Maximum order of the spherical harmonic expansion for the body undergoing the acceleration.
+        description: Body used as 'perturbed' in the calculation of the de Sitter acceleration. For the case of an Earth-orbiting satellite, this would be the Sun
 
       - name: centralBodyAngularMomentum # [cpp]
         type: Eigen::Vector3d, default=Eigen::Vector3d::Zero() # [cpp]
       - name: lense_thirring_angular_momentum # [py]
         type: numpy.ndarray, default=numpy.array([0, 0, 0]) # [py]
-        description: Maximum degree of the spherical harmonic expansion for the central body, if needed.
+        description: Angular momentum vector (in global frame) that is to be used for the calculation of the Lense-Thirring acceleration
 
     returns:
         type: RelativisticAccelerationCorrectionSettings
