--- a/docstrings/numerical_simulation/__package__.yaml
+++ b/docstrings/numerical_simulation/__package__.yaml
@@ -36,6 +36,10 @@ classes:
           'conventional' formulations (e.g. Cartesian states for translational dynamics), see `here <https://tudat-space.readthedocs.io/en/latest/_src_api/propagation_setup/settings/conventional_vs_propagated_coordinates.html>`_
           for detailed. For the history of the states that were actually propagated, use the ``unprocessed_state_history``.
 
+          .. note:: The propagated state at each epoch contains the state types in the following order: Translational ( **C** ), Rotational ( **R** ), Mass ( **M** ), and Custom ( **C** ).
+                    When propagating two bodies, an example of what the output state would look like is for instance:
+                    [ **T** Body 1, **T** Body 2, **R** Body 1, **R** Body 2, **M** Body 1, **M** Body 2 ]
+
           .. note:: For propagation of translational dynamics using cowell
                     propagator, the conventional and propagated
                     coordinates are identical.
