--- a/docstrings/numerical_simulation/environment_setup/ephemeris.yaml
+++ b/docstrings/numerical_simulation/environment_setup/ephemeris.yaml
@@ -1204,11 +1204,10 @@ functions:
       Currently the data that is provided gets interpolated by a 6th order Lagrange interpolator (hardcoded).
       At the edges of the interpolation interval a cubic spline interpolator is used to suppress the influence of Runge's phenomenon.
 
-    properties:
+    parameters:
       - name: body_state_history # [py]
         type: dict # [py]
         description: Dictionary of the discrete state history data from which ephemeris is to be created. Keys representing the time (float) and values representing Cartesian states (numpy.ndarray). # [py]
-        readonly: True # [py]
       - name: bodyStateHistory # [cpp]
         type: std::map< double, Eigen::Vector6d > # [cpp]
         description: Data map defining discrete data from which an ephemeris is to be created. Keys representing the time (double) and values representing Cartesian states (Eigen::Vector6d). # [cpp]
@@ -1252,5 +1251,58 @@ functions:
             frame_orientation ) # [py]
 
       # cpp code snippet unavailable # [cpp]
+
+  #######################################################################
+  
+  - name: tabulated_from_existing # [py]
+    short_summary: "Factory function for creating tabulated ephemeris model settings from existing ephemeris."
+    extended_summary: |
+      Factory function for creating tabulated ephemeris model settings from existing ephemeris.
+      The ephemeris that is provided gets tabulated in a given time frame, for a given time step.
+      When called, this tabulated ephemeris will use interpolation, when needed, from the specified interpolator.
+
+      .. note:: Creating tabulated ephemeris from existing ephemeris can for instance be used when combined with estimation.
+                This is because estimation needs the ephemeris to be tabulated to work.
+
+    parameters:
+      - name: ephemeris_settings # [py]
+        type: tudatpy.numerical_simulation.environment_setup.ephemeris.EphemerisSettings # [py]
+        description: Existing ephemeris settings that have to be tabulated. # [py]
+
+      - name: start_time # [py]
+        type: float # [py]
+        description: Initial time for which to create the tabulated ephemeris.
+
+      - name: end_time # [py]
+        type: float # [py]
+        description: Final time for which to create the tabulated ephemeris.
+
+      - name: time_step # [py]
+        type: float # [py]
+        description: Time step to use to tabulate the existing ephemeris.
+
+      - name: interpolator_settings # [py]
+        type: tudatpy.math.interpolators.InterpolatorSettings, default=tudatpy.math.interpolators.lagrange_interpolation(8) # [py]
+        description: Interpolator settings to use when interpolating between two tabulated ephemeris.
+
+    returns:
+        type: TabulatedEphemerisSettings
+        description: Instance of the :class:`~tudatpy.numerical_simulation.environment_setup.ephemeris.EphemerisSettings` derived :class:`~tudatpy.numerical_simulation.environment_setup.ephemeris.TabulatedEphemerisSettings` class
+
+
+    examples: |
+      In this example, we create :class:`~tudatpy.numerical_simulation.environment_setup.ephemeris.EphemerisSettings` for Io.
+      First, we extract the existing ephemeris. Then, we define new tabulated ephemeris settings, from the original settings.
+
+      .. code-block:: python # [py]
+        # [py]
+        # Get the original ephemeris settings # [py]
+        original_io_ephemeris_settings = body_settings.get( "Io" ).ephemeris_settings # [py]
+        # Apply new tabulated ephemeris settings # [py]
+        body_settings.get( "Io" ).ephemeris_settings =  environment_setup.ephemeris.tabulated_from_existing( # [py]
+          original_io_ephemeris_settings, # [py]
+          initial_time, # [py]
+          final_time, # [py]
+          time_step ) # [py]
 
   #######################################################################
