--- a/docstrings/numerical_simulation/environment_setup/gravity_field_variation.yaml
+++ b/docstrings/numerical_simulation/environment_setup/gravity_field_variation.yaml
@@ -72,9 +72,10 @@ functions:
          # [py]
          tide_raising_body = "Moon"
          degree = 2 # [py]
-         love_number = 0.301 # [py]
-         body_settings.get( "Earth" ).gravity_field_variation_settings.append( environment_setup.gravity_field_variation.solid_body_tide( # [py]
+         gravity_field_variation_list = list() # [py]
+         gravity_field_variation_list.append( environment_setup.gravity_field_variation.solid_body_tide( # [py]
          	tide_raising_body, love_number, degree ) # [py]
+         body_settings.get( "Earth" ).gravity_field_variation_settings = gravity_field_variation_list # [py]
 
 
 
@@ -130,8 +131,10 @@ functions:
          love_numbers = dict( ) # [py]
          love_numbers[ 2 ] = 0.301 # [py]
          love_numbers[ 3 ] = 0.09 # [py]
-         body_settings.get( "Earth" ).gravity_field_variation_settings.append( environment_setup.gravity_field_variation.solid_body_tide( # [py]
+         gravity_field_variation_list = list() # [py]
+         gravity_field_variation_list.append( environment_setup.gravity_field_variation.solid_body_tide( # [py]
          	tide_raising_body, love_numbers ) # [py]
+         body_settings.get( "Earth" ).gravity_field_variation_settings = gravity_field_variation_list # [py]
 
 
 
@@ -187,10 +190,14 @@ functions:
          love_numbers = dict( ) # [py]
          love_numbers[ 2 ] = list( ) # [py]
          love_numbers[ 2 ].append( 0.024615 ) # [py]
-         love_numbers[ 2 ].append( 0.023915 ) # [py]
+         love_numbers[ 2 ].append( 0	.023915 ) # [py]
          love_numbers[ 2 ].append( 0.024852 ) # [py]
-         body_settings.get( "Moon" ).gravity_field_variation_settings.append( environment_setup.gravity_field_variation.solid_body_tide( # [py]
+         gravity_field_variation_list = list() # [py]
+         gravity_field_variation_list.append( environment_setup.gravity_field_variation.solid_body_tide( # [py]
          	tide_raising_body, love_numbers ) # [py]
+         body_settings.get( "Earth" ).gravity_field_variation_settings = gravity_field_variation_list # [py]
+
+
 
 
   - name: solid_body_tide_degree_order_variable_complex_k # [py]
